Update QR code image source in index.html

--- a/Copyright/index.html
+++ b/Copyright/index.html
@@ -199,7 +199,7 @@
                 <h2>阅读新时代，尽在冰书</h2>
                 <div class="qrcode-container">
                     <div class="qrcode">
-                        <img src="https://bingbook.cn/img/wx.png" alt="冰书公众号二维码">
+                        <img src="https://bingbook.cn/img/qrcode.jpg" alt="冰书公众号二维码">
                     </div>
                     <div class="qrcode-text">
                         <h3>扫描二维码关注我们</h3>
